--- a/static/index.html
+++ b/static/index.html
@@ -33,12 +33,12 @@
 		<h1>Profile viewer</h1>
 
 
-		<form class="layout-line" data-co="profile-select-form" class="profile-select-form">
+		<form class="layout-line profile-select-form" data-co="profile-select-form">
   			<div class="layout-line_cell-auto">
   				<label for="profile" class="article-5">Profile:</label>
   				<input id="profile" data-co="profile-field" class="profile-select-form_login-input">
   			</div>
-  			<button data-co="view-btn" class="layout-line_cell-auto dwc_btn" type="submit">View</button>	
+  			<button data-co="view-btn" class="layout-line_cell-auto basebtn __invert-blue" type="submit">View</button>	
 		</form>
 		
 		
@@ -51,7 +51,6 @@
    			</dd>
 		</dl>
 	</div>
-	<script src="/libs/jquery.js"></script>
 	<script src="/libs/solid-auth-client.bundle.js"></script>
 	<script src="/libs/rdflib.min.js"></script>
 	<script src="/scripts/main.js" type="module"></script>
