--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Profile Viewer</title>
-	<link rel="stylesheet" type="text/css" href="/styles/main.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--  -->
 </head>
@@ -52,8 +52,8 @@
 			</dl>
 		</main>
 	</div>
-	<script src="/libs/solid-auth-client.bundle.js"></script>
-	<script src="/libs/rdflib.min.js"></script>
-	<script src="/scripts/main.js" type="module"></script>
+	<script src="libs/solid-auth-client.bundle.js"></script>
+	<script src="libs/rdflib.min.js"></script>
+	<script src="scripts/main.js" type="module"></script>
 </body>
 </html>
