complete creation of bookmarks

--- a/static/index.html
+++ b/static/index.html
@@ -65,6 +65,7 @@
 				<button type="reset">Reset</button>
 			</div>
 		</form>
+		<ul data-co="bookmark-list"></ul>
 	</div>
 	<script src="libs/solid-auth-client.bundle.js"></script>
 	<script src="libs/rdflib.min.js"></script>
