--- a/static/index.html
+++ b/static/index.html
@@ -68,8 +68,8 @@
 							<input class="basefield" type="text" data-co="bookmark-form-url-field" required/>
 						</label>
 						<div>
-							<button type="reset" class="basebtn __invert-black">Reset</button>
-							<button type="submit" class="basebtn __invert-blue">Submit</button>
+							<button type="reset" class="basebtn __gray">Reset</button>
+							<button type="submit" class="basebtn __blue">Submit</button>
 						</div>
 					</form>
 				</div>
