--- a/static/index.html
+++ b/static/index.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="layout-line_cell-full">
 					<div class="bookmarks-block_inner">
-						<ul data-co="bookmark-list"></ul>			
+						<ol data-co="bookmark-list"></ol>			
 					</div>
 				</div>
 			</div>	
