add removing operation

--- a/static/index.html
+++ b/static/index.html
@@ -84,6 +84,7 @@
 			<div class="layout-line bookmarks-block mb3">
 				<div class="layout-line_cell-auto bookmarks-block_left">
 					<form data-co="review-form">
+						<input type="hidden" data-co="review-form-id-field"/>
 						<label class="bookmark-form_row">
 							<div>Hotel:</div>
 							<input class="basefield" type="text" data-co="review-form-hotel-field" required/>
