--- a/static/index.html
+++ b/static/index.html
@@ -65,8 +65,11 @@
 			</form>
 			<div class="btnline mb1">
 				<button class="basebtn __gray" data-co="btn-create-folder">Create folder</button>
-				<button class="basebtn __gray" data-co="btn-upload">Upload files</button>
+				<!-- <button class="basebtn __gray" data-co="btn-upload">Upload files</button> -->
 				<button class="basebtn __gray" data-co="btn-show-info">Folder info</button>
+				<label class="basebtn __gray">
+					<input type="file" data-co="btn-upload" class="sc_invisible"><span>Upload files</span>
+				</label>
 			</div>
 			<div class="navigation-table_wrap">
 				<table class="navigation-table">
