--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 	<div data-co="logout-block" style="display: none;"> 
-		<div class="layout-line">
+		<div class="layout-line mb4">
 			<div class="layout-line_cell-full ta-r">
 				<span class="article-5">You are logged in as <span data-co="user-label"></span>.</span>
 			</div>
