--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,9 @@
 		</div>
 	</div>
 	<div data-co="logout-block" style="display: none;"> 
-		<div class="layout-line mb4">
+		<div class="app-header layout-line mb4">
 			<div class="layout-line_cell-full ta-r">
-				<span class="article-5">You are logged in as <span data-co="user-label"></span>.</span>
+				<span class="article-5 mr1">You are logged in as <span data-co="user-label"></span>.</span>
 			</div>
 			<div class="layout-line_cell-auto">
 				 <button data-co="logout-btn" class="dwc_btn">Log out</button>
