refactor the project

--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
 			<form class="layout-line profile-select-form mb1" data-co="navigation-form">
 				<button class="layout-line_cell-auto basebtn __invert-blue" type="reset" data-co="navigation-back-btn">Back</button>
   				<div class="layout-line_cell-full profile-select-form_login-input">
-  					<input data-co="navigation-url" class="basefield">	
+  					<input data-co="navigation-url" class="basefield __invert-blue">	
   				</div>
 	  			<button class="layout-line_cell-auto basebtn __invert-blue" type="submit">Go</button>	
 			</form>
@@ -95,6 +95,6 @@
 	<div id="node-heap"></div>
 	<script src="libs/solid-auth-client.bundle.js"></script>
 	<script src="libs/rdflib.min.js"></script>
-	<script src="scripts/index.controller.js" type="module"></script>
+	<script src="scripts/controllers/index.controller.js" type="module"></script>
 </body>
 </html>
